# renovate-uv-workspace-test

./: main.py  pyproject.toml  renovate.json
subpackage/: pyproject.toml
subpackage/src/subpackage/: __init__.py
