[project]
name = "subpackage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adam Kern", email = "adam.kern@airspace-intelligence.com" },
]
requires-python = ">=3.11"
dependencies = ["polars"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
